--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Would u like to watch some Harry Potter with me?</h1>
+                <h1 class = "header_text">Would u like to be my labmate on Physics classes?</h1>
             </div>
             <div class="gif_container">
-                <img src="https://media.giphy.com/media/PQWkeKVrmdOWopLhhY/giphy.gif" alt="Cute animated illustration">
+                <img src="machiko-rabbit.gif" alt="Cute animated illustration">
             </div>
             <div class = "buttons">
                 <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
